@@ -1,3 +1,10 @@
+2010-07-02  Ramon Novoa  <rnovoa@artica.es>
+
+	* modules/pandora_module.h, modules/pandora_module_factory.cc,
+	  modules/pandora_module.cc, pandora_windows_service.cc: Added the
+	  module_condition feature. See http://openideas.info/wiki/ for more
+	  information.
+
 2010-06-30  Ramon Novoa  <rnovoa@artica.es>
 
 	* windows/pandora_wmi.cc: getDiskFreeSpacePercent should not return
